# pygranite

./: .clang-format  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md  build-wheels.ps1  build-wheels.sh  config-venv.ps1  config-venv.sh  create-wheels.ps1  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build.yml  linux-build.yml  windows-build.yml
source/: pygranite.cpp  pygranite.hpp
source/granite/: AbortReason.hpp  CauchyGreenIntegrator.cu  CauchyGreenIntegrator.hpp  ComputeLoader.cpp  ComputeLoader.hpp  Constants.hpp  DataLoader.cpp  DataLoader.hpp  Info.hpp  IntegratorSettings.hpp  Language.hpp  SimulationData.hpp  TextureInfo.hpp  TrajectoryIntegrator.cpp  TrajectoryIntegrator.gen.py  TrajectoryIntegrator.hpp  TrajectoryIntegrator.icc  TrajectoryIntegrator.tpp  TrajectoryIntegratorMacros.hpp  TrajectorySet.cpp  TrajectorySet.hpp  WindfieldLoader.cpp  WindfieldLoader.hpp
source/my/cuda/: ToolKernel.cuh  ToolKernel.tpp
source/my/math/: Arithmetic.hpp  Constants.hpp  LinearAlgebra.hpp
source/my/util/: Config.hpp  SwapChain.hpp  Util.cuh
source/test/: Test.cpp  Test.hpp
test/: test.py
